feat(project):  add build-in translations for various languages (#15759)
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jzmnskj0q2g22jae09kag5dw
branchName: main
commitSha: c70e50a5e6cb0137ab8aab52b973374a311eec65
commitUrl: https://github.com/Redocly/redocly/commit/c70e50a5e6cb0137ab8aab52b973374a311eec65

--- a/docs/realm/config/l10n.md
+++ b/docs/realm/config/l10n.md
@@ -47,6 +47,9 @@ Control display labels of languages in language picker.
 - code
 - string
 - Language code. Must match the name of the language subfolder inside the `@l10n` folder or the `defaultLocale` code.
+  The format of the code is `lang-COUNTRY` or `lang`, where `lang` is the [language code](https://en.wikipedia.org/wiki/ISO_639-1) and `COUNTRY` is the country code.
+  For example, `en-US` for English (United States) and `fr-FR` for French (France), or `en` for English.
+  More specific fallback locales are supported, for example `de-AT` falls back to `de`;
 
 ---
 
@@ -81,6 +84,26 @@ your-awesome-project/
     ├── nl-NL
     └── en-GB
 ```
+
+### Supported default translations
+
+Redocly provides default translations for the following languages:
+
+- `en` - English (United States)
+- `ar` - Arabic
+- `hi` - Hindi
+- `de` - German
+- `es` - Spanish
+- `fr` - French
+- `it` - Italian
+- `ja` - Japanese
+- `ko` - Korean
+- `pl` - Polish
+- `pt` - Portuguese (Portugal)
+- `pt-BR` - Portuguese (Brazil)
+- `ru` - Russian
+- `uk` - Ukrainian
+- `zh` - Chinese (Simplified)
 
 ## Resources
 
